syntax = "proto3";

package users;

option go_package = "proto/users";

service UserService {
    rpc FindByUsername(FindByUsernameRequest) returns (FindByUsernameResponse);
}

message FindByUsernameRequest {
    string username = 1;
}

message FindByUsernameResponse {
    string email = 1;
    string password = 2;
}