syntax = "proto3";

package auth;

option go_package = "auth-service/proto/auth";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string username = 1;
}

message LoginResponse {
    string email = 1;
    string password = 2;
}